adiciona exemplos aula 4

--- a/Semana1/aula4/index.html
+++ b/Semana1/aula4/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DevInHouse Aula 4</title>
+  <link rel="stylesheet" href=" style.css">
   <style>
     /* Exemplo de estilo com tag style */
     h2 {
@@ -16,7 +17,9 @@
 <body>
   <!--Exemplo de estilo inline-->
   <h1 style="color: darkviolet; font-size: 24px;">Início Aula 4</h1>
-  <h2>Início Aula 4</h2>
+  <h2 id="subtitulo">Estilos CSS</h2>
   <p>Página Exemplo</p>
+  <p class="destaque">Segundo Parágrafo</p>
+
 </body>
 </html>
