Adiciona exemplos aula 4

--- a/Semana1/aula4/index.html
+++ b/Semana1/aula4/index.html
@@ -5,12 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DevInHouse Aula 4</title>
+  <!-- Exemplo de estilo em arquivo externo-->
   <link rel="stylesheet" href=" style.css">
   <style>
     /* Exemplo de estilo com tag style */
     h2 {
       font-size: 18px;
-      color: orange;
+      color: rgb(118, 14, 113);
     }
   </style>
 </head>
@@ -18,8 +19,24 @@
   <!--Exemplo de estilo inline-->
   <h1 style="color: darkviolet; font-size: 24px;">Início Aula 4</h1>
   <h2 id="subtitulo">Estilos CSS</h2>
-  <p>Página Exemplo</p>
-  <p class="destaque">Segundo Parágrafo</p>
 
+  <p>Página <a href="http://google.com">Exemplo</a></p>
+  <p class="destaque">
+    Lorem, <span> ipsum <span> sit amet </span>  consectetur </span> adipisicing elit. Quidem temporibus iure nam? Impedit id officia voluptas, corrupti dolorum, omnis praesentium reiciendis rem dolore ducimus doloribus, libero iusto facere dolor cupiditate?
+  </p>
+
+  <ul id="lista">
+    <li>Mousse de Chocolate</li>
+      <ul class="item">
+        <li><p> Branco </li>   
+        <li><p> Leite </li>
+        <li><p> Amargo </li></p> 
+        </ul>
+    <li>Cheesecake de Morango</li>
+    <li>Torta de Bolacha</li>
+    <li>Pudim</li>
+  </ul>
+
+  <button>Este é um botão</button>
 </body>
 </html>
